--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,9 @@ a.active hr{
     font-style: normal;
   }
   
+@media (max-width: 640px){
+    a.ative{
+        background-color: black;
+        color: white;
+    }
+}
